--- a/FracfocusAPI/appsettings.json
+++ b/FracfocusAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AzureConnection": "Server=tcp:toannazuredb.database.windows.net,1433;Initial Catalog=FracfocusDB;Persist Security Info=False;User ID=[account];Password=[password];MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "AzureConnection": "Server=[hosting-server];Initial Catalog=FracfocusDB;Persist Security Info=False;User ID=[account];Password=[password];MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "LocalConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=FracFocusRegistry;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
